--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: npm install and build webpack
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
         run: |
           npm install
           npm run build
